アーティスト画像のalt属性を修正

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <body>
 	<div class="line-header">青春は海だ！ニューシングルリリース</div>
 	<div class="container">
-		<img src="ando8bit.png" alt="アーティスト画像" class="profile-img">
+		<img src="ando8bit.png" alt="アーティストの画像" class="profile-img">
 		<div class="song-title">青春は海だ！</div>
 		<div class="desc">高校生活に退屈を感じた高校生が海へと向かう<br>青春のほろ苦い思い出の曲</div>
 		<div class="audio-player">
